crates/arity-formatter/tests/snapshots/formatter__if_else_anon_function_body_in_call_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
f <- function(x, cls) {
  if (all(cls %in% c("LINESTRING", "MULTILINESTRING"))) {
    x <- lapply(
      x,
      function(x) {
        if (inherits(x, "LINESTRING")) LINESTRING2MULTILINESTRING(x) else x
      }
    )
    class(x) <- c("sfc_MULTILINESTRING", "sfc")
  }
}
