crates/arity-formatter/tests/snapshots/formatter__if_else_comment_forces_both_braces_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
vec_ptype2_impl <- function(x, y) {
  if (identical(class(x), class(y))) {
    x
  } else {
    # return empty for mixed types
    st_sfc(crs = st_crs(x))
  }
}
