crates/arity-formatter/tests/snapshots/formatter__if_else_if_block_propagation_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (cond) {
  a
} else if (cond2) {
  b
} else {
  c
}
