crates/arity-formatter/tests/snapshots/formatter__if_else_if_chain_long_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (a) {
  aa
} else if (b) {
  bb
} else if (cc) {
  cc2
} else {
  dd
}
