crates/arity-formatter/tests/snapshots/formatter__if_else_if_empty_branch_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
if (is.null(a)) {} else if (a) {
  1
} else {}
