crates/arity-formatter/tests/snapshots/formatter__if_else_interstitial_comment_bare_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
{
  if (a) {
    this
  } else {
    # comment
    that
  }
}
