crates/arity-formatter/tests/snapshots/formatter__if_else_interstitial_comment_block_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
{
  if (a) {
    1
  } else {
    # comment
    2
  }
}
