crates/arity-formatter/tests/snapshots/formatter__if_else_trailing_comment_after_bare_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
{
  if (cond) {
    this # trails the body
  } else {
    that
  }
}
