crates/arity-formatter/tests/snapshots/formatter__if_else_trailing_comment_after_block_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
{
  if (a) {
    # comment
    1
  } else {
    2
  }
}
