crates/arity-formatter/tests/snapshots/formatter__if_else_trailing_comment_preserves_order_formatted.snap
---
source: crates/arity-formatter/tests/formatter.rs
expression: formatted
---
x <- if (a) {
  ## first reason
  ## second reason
  b
} else {
  c
}
