crates/arity-formatter/tests/snapshots/formatter__if_nested_consequence_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
x <- if (a) {
  if (b) 1
}
if (condition) {
  if (condition2) this else that
}
